--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JokerAppDev">
         <activity
-            android:exported="true"
-            android:name=".MainActivity">
+            android:name=".view.CategoryItem"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
