--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,11 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        //libs externas
+        maven {url "https://jitpack.io"}
     }
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
